@@ -79,6 +79,17 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.2.0</version>
         </dependency>
+       <!-- https://mvnrepository.com/artifact/io.javalin/javalin -->
+       <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>se.michaelthelin.spotify</groupId>
+            <artifactId>spotify-web-api-java</artifactId>
+            <version>6.5.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -95,10 +106,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>15</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <release>16</release>
                 </configuration>
             </plugin>
             <plugin>
